Thu Jun  6 01:39:29 BST 2013  Colin Watson  <cjwatson@debian.org>

	* docs/INSTALL.quick: Reformat external package requirements as a
	  bullet list.  Add flex >= 2.5.30.

Thu Jun  6 01:32:19 BST 2013  Colin Watson  <cjwatson@debian.org>

	* tools/config.guess: Update to 2013-05-16.
	* tools/config.sub: Update to 2013-04-24.

Tue Jun  4 09:38:08 BST 2013  David Prévot  <david@tilapin.org>

	* man/po4a/po/fr.po: Update from Translation Project.

Mon Jun  3 22:59:03 BST 2013  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po: Update from Translation Project.

Mon Jun  3 13:06:43 BST 2013  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.4-pre1.

Mon Jun  3 12:39:22 BST 2013  Colin Watson  <cjwatson@debian.org>

	* NEWS: Document changes since 2.6.3.

Mon Jun  3 12:18:55 BST 2013  Colin Watson  <cjwatson@debian.org>

	* manual/files.me (NLS manual pages): Wrap a table cell to avoid a
	  line-width warning from nroff.

Mon Jun  3 12:07:35 BST 2013  Colin Watson  <cjwatson@debian.org>

	Quieten most warnings from compiling Gnulib (Debian bug #668429).

	* configure.ac: Add gl_WARN_ADD results to WARN_CFLAGS rather than
	  CFLAGS.
	* lib/Makefile.am (AM_CFLAGS): Add $(WARN_CFLAGS).
	* libdb/Makefile.am (AM_CFLAGS): Likewise.
	* src/Makefile.am (AM_CFLAGS): Likewise.  Move $(libpipeline_CFLAGS)
	  here from AM_CPPFLAGS.

Mon Jun  3 00:01:47 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/tests/Makefile.am (AM_LOG_FLAGS): Force each test to run with
	  the configure-detected shell.

Thu May 30 12:57:50 BST 2013  Peter Schiffer  <pschiffe@redhat.com>
                              Colin Watson  <cjwatson@debian.org>

	Add support for wildcards in MANPATH (Fedora bug #677669).

	* src/Makefile.am (catman_SOURCES, manpath_SOURCES, whatis_SOURCES):
	  Add globbing.c and globbing.h.
	* src/globbing.c (expand_path): New function.
	* src/globbing.h (expand_path): Add prototype.
	* src/manp.c (add_dir_to_list): Rename to ...
	  (add_expanded_dir_to_list): ... this.