@@ -1,3 +1,8 @@
+Thu Jun  6 01:43:29 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	* man/Rules.man (TESTS_ENVIRONMENT): Move environment variable
+	  settings here, rather than using non-portable 'export'.
+
 Thu Jun  6 01:39:29 BST 2013  Colin Watson  <cjwatson@debian.org>
 
 	* docs/INSTALL.quick: Reformat external package requirements as a
